Gradle 8.x update, with min SDK and JAVA 17 compability

--- a/packages/iabtcf_consent_info/example/android/app/build.gradle
+++ b/packages/iabtcf_consent_info/example/android/app/build.gradle
@@ -26,7 +26,9 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 34
+
+    namespace = "com.example.iabtcf_consent_info_example"
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -34,8 +36,8 @@ android {
 
     defaultConfig {
         applicationId "com.example.iabtcf_consent_info_example"
-        minSdkVersion 16
-        targetSdkVersion 31
+        minSdkVersion flutter.minSdkVersion
+        targetSdkVersion 34
         multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -48,6 +50,10 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
 }
 
 flutter {
@@ -57,5 +63,5 @@ flutter {
 dependencies {
     implementation "androidx.multidex:multidex:2.0.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.preference:preference-ktx:1.2.0"
+    implementation "androidx.preference:preference-ktx:1.2.1"
 }
