--- a/packages/iabtcf_consent_info/android/src/main/AndroidManifest.xml
+++ b/packages/iabtcf_consent_info/android/src/main/AndroidManifest.xml
@@ -1,3 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.gabriel.terwesten.iabtcf_consent_info">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 </manifest>
